--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "npm run copy && nodemon src/server/server.js --ignore src && sass --watch src/style/main.sass:dist/app/main.css",
-    "copy": "mkdir dist && cp src/index.html dist/index.html",
+    "copy": "mkdir -p dist && cp src/index.html dist/index.html && cp -R src/public/ dist/public/",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Clément Sirieix",
@@ -22,6 +22,7 @@
     "css-loader": "^0.25.0",
     "express": "^4.14.0",
     "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.9.0",
     "flow-babel-webpack-plugin": "^1.0.1",
     "jade": "^1.11.0",
     "json-loader": "^0.5.4",
@@ -31,6 +32,7 @@
     "react-router": "^3.0.0",
     "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
     "webpack": "^1.13.3",
     "webpack-dev-server": "^1.16.2",
     "webpack-hot-middleware": "^2.13.1"
